--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-@import "slick-carousel/slick/slick.css";
-@import "slick-carousel/slick/slick-theme.css";
+@import "keen-slider/keen-slider.min.css";
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
